# slp-transducer-evaluation

./: .gitignore  README.md  paper-meta.yaml
.github/workflows/: latex-builder.yml  ruff-linter.yml
report/: main.tex
report/lib/: packages.tex  sensible-math.tex
slp-eval-py/: README.md  automata.py  compression_model.py  main.py  pyproject.toml  transducer_models.py
slp-eval-py/src/slp_eval/: compression_model.py  lz78.py  transducer_models.py
slp-eval-py/src/slp_eval/tests/: automata_test.py  benchmark_dfa.py  benchmark_sst.py  compression_model_test.py  lz78_test.py  sst_on_slp_test.py
slp-eval-py/src/slp_eval/tests/files/: t0.txt  t1.txt  t10.txt  t13.txt  t2.txt  t3.txt  t4.txt  t5.txt  t6.txt  t7.txt  t8.txt  t9.txt
spl-eval-py/: main.py  pyproject.toml
